--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   hello_world:
-    runs-on: ubantu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: "Print Hello world"
         run: echo "Hello World"
