--- a/.github/workflows/multiEventPipeline.yml
+++ b/.github/workflows/multiEventPipeline.yml
@@ -4,6 +4,11 @@ on:
     push:
         branches:
             - main
+            - test
+
+    pull_request:
+        branches: 
+            - main
 
 jobs:
     on-push:
@@ -11,3 +16,9 @@ jobs:
         steps:
             - name: "Running on main push"
               run: echo " Running on main push"
+
+    on-pull-request:
+         runs-on: ubuntu-latest
+         steps:
+            - name: "Running on pull request"
+              run: echo "Running on pull request"
