--- a/.github/workflows/multiEventPipeline.yml
+++ b/.github/workflows/multiEventPipeline.yml
@@ -5,6 +5,7 @@ on:
         branches:
             - main
             - test
+            - master
 
     pull_request:  # event whenever a pull request is made to repository.
         branches: 
